src/snapshots/zk_mutant__discover__tests__discover_simple_noir.snap
---
source: src/discover.rs
expression: mutants
---
[
    Mutant {
        id: 1,
        operator: MutationOperator {
            category: Condition,
            name: "lt_to_ge",
        },
        span: SourceSpan {
            file: "src/main.nr",
            start: 55,
            end: 56,
        },
        original_snippet: "<",
        mutated_snippet: ">=",
        outcome: NotRun,
        duration_ms: None,
    },
    Mutant {
        id: 2,
        operator: MutationOperator {
            category: Condition,
            name: "neq_to_eq",
        },
        span: SourceSpan {
            file: "src/main.nr",
            start: 94,
            end: 96,
        },
        original_snippet: "!=",
        mutated_snippet: "==",
        outcome: NotRun,
        duration_ms: None,
    },
    Mutant {
        id: 3,
        operator: MutationOperator {
            category: Condition,
            name: "eq_to_neq",
        },
        span: SourceSpan {
            file: "src/utils.nr",
            start: 113,
            end: 115,
        },
        original_snippet: "==",
        mutated_snippet: "!=",
        outcome: NotRun,
        duration_ms: None,
    },
]
