src/snapshots/zk_mutant__discover__tests__discover_simple_noir_mutants.snap
---
source: src/discover.rs
expression: mutants
---
[
    Mutant {
        id: 1,
        operator: MutationOperator {
            category: Condition,
            name: "neq_to_eq",
        },
        span: SourceSpan {
            file: "src/main.nr",
            start: 82,
            end: 84,
        },
        original_snippet: "!=",
        mutated_snippet: "==",
        outcome: NotRun,
        duration_ms: None,
    },
    Mutant {
        id: 2,
        operator: MutationOperator {
            category: Condition,
            name: "lt_to_ge",
        },
        span: SourceSpan {
            file: "src/main.nr",
            start: 43,
            end: 44,
        },
        original_snippet: "<",
        mutated_snippet: ">=",
        outcome: NotRun,
        duration_ms: None,
    },
    Mutant {
        id: 3,
        operator: MutationOperator {
            category: Condition,
            name: "eq_to_neq",
        },
        span: SourceSpan {
            file: "src/main2.nr",
            start: 231,
            end: 233,
        },
        original_snippet: "==",
        mutated_snippet: "!=",
        outcome: NotRun,
        duration_ms: None,
    },
    Mutant {
        id: 4,
        operator: MutationOperator {
            category: Condition,
            name: "neq_to_eq",
        },
        span: SourceSpan {
            file: "src/main2.nr",
            start: 43,
            end: 45,
        },
        original_snippet: "!=",
        mutated_snippet: "==",
        outcome: NotRun,
        duration_ms: None,
    },
]
